--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="santa">
+        <div class="santa" role="img" aria-label="Santa">
             <div class="santa__head">
                 <div class="santa__tail">
                     <div class="santa__bombel"></div>
